workload2/add-prefix-gwapi.middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-prefix-gwapi
spec:
  addPrefix:
    prefix: /gatewayapi
